--- a/index.html
+++ b/index.html
@@ -9,7 +9,72 @@
     </head>
     <body>
 
-        <h1>Sign-up Form</h1>
+        <!-- <h1>Sign-up Form</h1> -->
+        <div class="main-container">
+            <div class="left-container"></div>
+            <div class="right-container">
+
+                <section class="section-1">
+                    <h3 class="main-message">This is not a real online service!
+                        You know you need something <br> like this in your life
+                        to help you realize your deepest dreams. <br>
+                        Sign up now to get started. <br> <br>
+                        You <em>know</em> you want to.
+                    </h3>
+                </section>
+
+                <section class="section-2">
+                    <h2>Let's do this!</h2>
+                </section>
+
+                <section class="section-3">
+                    <form action="https//httpbin.org/post" method="post">
+                        <fieldset class="form-input">
+
+                        <div class="form-separator-1">
+                        <p class="input-block">
+                        <label for="firstname">FIRST NAME</label>
+                        <input type="text" id="firstname" name="user_firstname" required>
+                        </p>
+
+                        <p class="input-block">
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="user_email" required>
+                        </p>
+
+                        <p class="input-block">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password" name="user_password" required>
+                        </p>
+                        </div>
+
+                        <div class="form-separator-3">
+                        <p class="input-block">
+                        <label for="lastname">LAST NAME</label>
+                        <input type="text" id="lastname" name="user_lastname" required>
+                        </p>
+
+                        <p class="input-block">
+                        <label for="phonenum">PHONE NUMBER</label>
+                        <input type="tel" id="phonenum" name="user_phonenum" required>
+                        </p>
+
+                        <p class="input-block">
+                        <label for="password">CONFIRM PASSWORD</label>
+                        <input type="password" id="password" name="user_password" required>
+                        </p>
+                        </div>
+                    </fieldset>
+
+                    <fieldset class="form-button">
+                        <button type="submit">Create Account</button>
+                    </fieldset>
+
+                    </form>
+                </section>
+
+            </div>
+        </div>
 
 
 
