Checkpoint save: Sign-up form project progress. - Styling UI.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
 
                 <section class="section-2">
                     <h2>Let's do this!</h2>
-                </section>
-
-                <section class="section-3">
                     <form action="https//httpbin.org/post" method="post">
                         <fieldset class="form-input">
 
@@ -48,7 +45,7 @@
                         </p>
                         </div>
 
-                        <div class="form-separator-3">
+                        <div class="form-separator-2">
                         <p class="input-block">
                         <label for="lastname">LAST NAME</label>
                         <input type="text" id="lastname" name="user_lastname" required>
@@ -66,9 +63,10 @@
                         </div>
                     </fieldset>
 
-                    <fieldset class="form-button">
+                    <div class="call-to-action">
                         <button type="submit">Create Account</button>
-                    </fieldset>
+                        <h3>Already have an account? <a href="#">Login</a></h3>
+                     </div>
 
                     </form>
                 </section>
