--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
     <body>
 
         <!-- <h1>Sign-up Form</h1> -->
+                
         <div class="main-container">
-            <div class="left-container"></div>
+            <div class="left-container">
+                <div class="banner">
+                    <img src="./images/odin-lined.png" width="18%" alt="odin-logo">
+                    <h1>ODIN</h1>
+                </div>
+                <div class="footer-credit">
+                    <h1>Image credit: unsplash/#</h1>
+                </div>
+            </div>
             <div class="right-container">
 
                 <section class="section-1">
