Checkpoint save: Sign-up form project progress. - Design and minor typo edits.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h1>ODIN</h1>
                 </div>
                 <div class="footer-credit">
-                    <h1>Image credit: unsplash/#</h1>
+                    <p>Photo by <u><a href="https://unsplash.com">Teemu-Paananen</a></u> on <u><a href="https://unsplash.com">Unsplash</a></u></p>
                 </div>
             </div>
             <div class="right-container">
