Checkpoint save: Sign-up form project done. - Odin logo size adjust. - third section items color adjust - Submit button size adjust. - Minor design edits

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="main-container">
             <div class="left-container">
                 <div class="banner">
-                    <img src="./images/odin-lined.png" width="18%" alt="odin-logo">
+                    <img src="./images/odin-lined.png" width="69px" alt="odin-logo">
                     <h1>ODIN</h1>
                 </div>
                 <div class="footer-credit">
